fix izy image 2

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <p>President</p>
             </div>
             <div class="col mx-auto">
-                <img class="unim-circle" src="images/IMG_20200831_122711 (1).jpg" alt="Izy Engel">
+                <img class="unim-circle" src="images/izy2020.jpg" alt="Izy Engel">
                 <h3>Izy Engel</h3>
                 <p>Vice President</p>
             </div>
