--- a/old.html
+++ b/old.html
@@ -135,7 +135,7 @@
             <p>President</p>
         </div>
         <div class="epics">
-            <img src="images/IMG_20200831_122711 (1).jpg" alt="Nathan Van Eck" style="width:40%" class="w3-circle w3-hover-opacity">
+            <img src="images/izy2020.jpg" alt="Nathan Van Eck" style="width:40%" class="w3-circle w3-hover-opacity">
             <h3>Izy Engel</h3>
             <p>Vice President</p>
         </div>
