--- a/index.html
+++ b/index.html
@@ -189,7 +189,53 @@
             </div>
         </div>
     </div>
-
+    <span id="events"></span>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col mx-10">
+                <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Events</span></div>
+                <div class="w3-row" id="eventstab">
+                    <!--                <div class="w3-col">-->
+                    <div>
+                        <p>Join us every Monday at 9:15 in Babbio 320 for our meetings</p>
+                        <p>Come hear about our plans for this semester next Monday, September 9th</p>
+                        <p>Don't miss our networking night September 23rd</p>
+                        <p>Make sure you don't miss our exciting workshops or our monthly board game nights</p>
+                    </div>
+                    <!--                </div>-->
+                    <!--                <div class="w3-col">-->
+                    <iframe id="calendar"
+                            src="https://calendar.google.com/calendar/b/1/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=c3RldmVucy5lZHVfNTI2YTRxM2NoMjJvdW80Y240Z2hvdmk0cjhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D81B60"
+                            style="border-width:0; max-width: 100%" width="500rem" height="300rem"></iframe>
+                    <!--                </div>-->
+                </div>
+                <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
+                <h3>Address</h3>
+                <p>Our base of operations</p>
+                <p><i class="fa fa-map-marker w3-text-teal w3-xlarge icon-start"></i>1 Castle Point Terrace, Hoboken, NJ, US</p>
+                <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge icon-start"></i>IEEE@stevens.edu</p>
+                <p><a href="https://sites.google.com/stevens.edu/ieeeworkshops/home">Workshop Slides</a>
+                <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Outside Opportunities</span>
+                </div>
+                <h3>Who should contact us?</h3>
+                <p><i class="fa fa-check-circle w3-text-teal icon-start" aria-hidden="true"></i>Stevens Students</p>
+                <p><i class="fa fa-check-circle w3-text-teal icon-start" aria-hidden="true"></i>Professors looking to present topics to
+                    Stevens Students</p>
+                <p><i class="fa fa-check-circle w3-text-teal icon-start" aria-hidden="true"></i>IEEE Societies and Student Chapters
+                    looking to collaborate</p>
+                <p><i class="fa fa-check-circle w3-text-teal icon-start" aria-hidden="true"></i>Companies looking to collaborate or
+                    present to Stevens Students</p>
+            </div>
+            <!--        <div class="w3-col m7">-->
+            <!--	     This is where you put the Tockify code -->
+            <!--	     -->
+            <!--	   	<div data-tockify-component="calendar" data-tockify-calendar="nick.tomaro"></div>-->
+            <!--<script data-cfasync="false" data-tockify-script="embed" src="https://public.tockify.com/browser/embed.js"></script>-->
+            <!--	  -->
+            <!--	     End of Tockify code -->
+            <!--        </div>-->
+        </div>
+    </div>
 </main><!-- /.container -->
 
 <!-- jQuery -->
